Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -195,5 +195,6 @@
   "dn15:30.2": "’Osećaj nije moje sopstvo; moje sopstvo ne doživljava osećaj’ trebalo pitati:",
   "dn15:30.3": "’Prijatelju, tamo gde ne postoji apsolutno ništa što je moguće osetiti, da li bi se ideja ’ja sam’ mogla pojaviti?’.”",
   "dn15:30.4": "„Sigurno da ne bi, poštovani gospodine.”",
-  "dn15:30.5": "Zbog toga, Ānanda, nije prihvatljivo smatrati da je osećaj sopstvo."
+  "dn15:30.5": "Zbog toga, Ānanda, nije prihvatljivo smatrati da je osećaj sopstvo.",
+  "dn15:31.1": "Onda bi, Ānanda, toga ko kaže:"
 }
