Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -197,5 +197,6 @@
   "dn15:30.4": "„Sigurno da ne bi, poštovani gospodine.”",
   "dn15:30.5": "Zbog toga, Ānanda, nije prihvatljivo smatrati da je osećaj sopstvo.",
   "dn15:31.1": "Onda bi, Ānanda, toga ko kaže:",
-  "dn15:31.2": "’Osećaj nije moje sopstvo; ali moje sopstvo nije bez doživljaja osećaja. Moje sopstvo oseća; jer moje sopstvo je podložno osećaju’"
+  "dn15:31.2": "’Osećaj nije moje sopstvo; ali moje sopstvo nije bez doživljaja osećaja. Moje sopstvo oseća; jer moje sopstvo je podložno osećaju’",
+  "dn15:31.3": "trebalo pitati:"
 }
