--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -199,5 +199,6 @@
   "dn15:31.1": "Onda bi, Ānanda, toga ko kaže:",
   "dn15:31.2": "’Osećaj nije moje sopstvo; ali moje sopstvo nije bez doživljaja osećaja. Moje sopstvo oseća; jer moje sopstvo je podložno osećaju’",
   "dn15:31.3": "trebalo pitati:",
-  "dn15:31.4": "’Prijatelju, ako bi osećaj potpuno nestao, bez ikakvog ostatka,"
+  "dn15:31.4": "’Prijatelju, ako bi osećaj potpuno nestao, bez ikakvog ostatka,",
+  "dn15:31.5": "u potpuno odsustvu osećaja, sa nestankom osećaja, da li bi se ideja ’ja sam’ mogla pojaviti?’.”"
 }
