--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -201,5 +201,6 @@
   "dn15:31.3": "trebalo pitati:",
   "dn15:31.4": "’Prijatelju, ako bi osećaj potpuno nestao, bez ikakvog ostatka,",
   "dn15:31.5": "u potpuno odsustvu osećaja, sa nestankom osećaja, da li bi se ideja ’ja sam’ mogla pojaviti?’.”",
-  "dn15:31.6": "„Sigurno da ne bi, poštovani gospodine.”"
+  "dn15:31.6": "„Sigurno da ne bi, poštovani gospodine.”",
+  "dn15:31.7": "\"Zbog toga, Ānanda, nije prihvatljivo smatrati da je sopstvo to koje doživljava osećaj."
 }
