--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -204,5 +204,6 @@
   "dn15:31.6": "„Sigurno da ne bi, poštovani gospodine.”",
   "dn15:31.7": "\"Zbog toga, Ānanda, nije prihvatljivo smatrati da je sopstvo to koje doživljava osećaj.",
   "dn15:32.1": "Ānanda, kada monah ne smatra osećaj sopstvom, ne smatra da je sopstvo bez doživljaja osećaja, kada ne smatra: ’Moje sopstvo oseća, jer je moje sopstvo podložno osećaju’ – ",
-  "dn15:32.2": "tada, bez takvih razmatranja, ne vezuje se za bilo šta na ovome svetu."
+  "dn15:32.2": "tada, bez takvih razmatranja, ne vezuje se za bilo šta na ovome svetu.",
+  "dn15:32.3": "Pošto se ne vezuje, nije uznemiren. Kada nije uznemiren, on stiže do nibbāne."
 }
