--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -206,5 +206,6 @@
   "dn15:32.1": "Ānanda, kada monah ne smatra osećaj sopstvom, ne smatra da je sopstvo bez doživljaja osećaja, kada ne smatra: ’Moje sopstvo oseća, jer je moje sopstvo podložno osećaju’ – ",
   "dn15:32.2": "tada, bez takvih razmatranja, ne vezuje se za bilo šta na ovome svetu.",
   "dn15:32.3": "Pošto se ne vezuje, nije uznemiren. Kada nije uznemiren, on stiže do nibbāne.",
-  "dn15:32.4": "Tada razume: ’Ovo je poslednje rođenje, proživljen je svetački život, učinjeno ono što je trebalo učiniti, nema više preporađanja u bilo koji oblik bivanja’."
+  "dn15:32.4": "Tada razume: ’Ovo je poslednje rođenje, proživljen je svetački život, učinjeno ono što je trebalo učiniti, nema više preporađanja u bilo koji oblik bivanja’.",
+  "dn15:32.5": "Ānanda, ako bi bilo ko o monahu čiji je um ovako oslobođen rekao da zastupa gledište:"
 }
