Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -208,5 +208,6 @@
   "dn15:32.3": "Pošto se ne vezuje, nije uznemiren. Kada nije uznemiren, on stiže do nibbāne.",
   "dn15:32.4": "Tada razume: ’Ovo je poslednje rođenje, proživljen je svetački život, učinjeno ono što je trebalo učiniti, nema više preporađanja u bilo koji oblik bivanja’.",
   "dn15:32.5": "Ānanda, ako bi bilo ko o monahu čiji je um ovako oslobođen rekao da zastupa gledište:",
-  "dn15:32.6": "’Tathāgata postoji posle smrti’ – to ne bi bilo istina;"
+  "dn15:32.6": "’Tathāgata postoji posle smrti’ – to ne bi bilo istina;",
+  "dn15:32.7": "ili da zastupa gledište: ’Tathāgata ne postoji posle smrti’ – to ne bi bilo istina;"
 }
