--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -209,5 +209,6 @@
   "dn15:32.4": "Tada razume: ’Ovo je poslednje rođenje, proživljen je svetački život, učinjeno ono što je trebalo učiniti, nema više preporađanja u bilo koji oblik bivanja’.",
   "dn15:32.5": "Ānanda, ako bi bilo ko o monahu čiji je um ovako oslobođen rekao da zastupa gledište:",
   "dn15:32.6": "’Tathāgata postoji posle smrti’ – to ne bi bilo istina;",
-  "dn15:32.7": "ili da zastupa gledište: ’Tathāgata ne postoji posle smrti’ – to ne bi bilo istina;"
+  "dn15:32.7": "ili da zastupa gledište: ’Tathāgata ne postoji posle smrti’ – to ne bi bilo istina;",
+  "dn15:32.8": "ili da zastupa gledište: ’Tathāgata i postoji i ne postoji posle smrti’ – to ne bi bilo istina;"
 }
