--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -211,5 +211,6 @@
   "dn15:32.6": "’Tathāgata postoji posle smrti’ – to ne bi bilo istina;",
   "dn15:32.7": "ili da zastupa gledište: ’Tathāgata ne postoji posle smrti’ – to ne bi bilo istina;",
   "dn15:32.8": "ili da zastupa gledište: ’Tathāgata i postoji i ne postoji posle smrti’ – to ne bi bilo istina;",
-  "dn15:32.9": "ili da zastupa gledište: ’Tathāgata ni postoji niti ne postoji posle smrti’ – to ne bi bilo istina."
+  "dn15:32.9": "ili da zastupa gledište: ’Tathāgata ni postoji niti ne postoji posle smrti’ – to ne bi bilo istina.",
+  "dn15:32.10": "A zašto?"
 }
