--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -212,5 +212,6 @@
   "dn15:32.7": "ili da zastupa gledište: ’Tathāgata ne postoji posle smrti’ – to ne bi bilo istina;",
   "dn15:32.8": "ili da zastupa gledište: ’Tathāgata i postoji i ne postoji posle smrti’ – to ne bi bilo istina;",
   "dn15:32.9": "ili da zastupa gledište: ’Tathāgata ni postoji niti ne postoji posle smrti’ – to ne bi bilo istina.",
-  "dn15:32.10": "A zašto?"
+  "dn15:32.10": "A zašto?",
+  "dn15:32.11": "Zato što je taj monah oslobođen tako što neposredno zna: koliko daleko označavanje i put označavanja dosežu, koliko daleko jezik i put jezika dosežu, koliko daleko opisivanje i put opisivanja dosežu, koliko daleko mudrost i područje mudrosti dosežu, koliko krug preporađanja i njegovo produžavanje dosežu. Reći za monaha koji je oslobođen ovakvim neposrednim znanjem da zastupa gledište: ’Ne postoji takva stvar kao što je znanje i viđenje’ – to ne bi bilo istina."
 }
