Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -214,5 +214,6 @@
   "dn15:32.9": "ili da zastupa gledište: ’Tathāgata ni postoji niti ne postoji posle smrti’ – to ne bi bilo istina.",
   "dn15:32.10": "A zašto?",
   "dn15:32.11": "Zato što je taj monah oslobođen tako što neposredno zna: koliko daleko označavanje i put označavanja dosežu, koliko daleko jezik i put jezika dosežu, koliko daleko opisivanje i put opisivanja dosežu, koliko daleko mudrost i područje mudrosti dosežu, koliko krug preporađanja i njegovo produžavanje dosežu. Reći za monaha koji je oslobođen ovakvim neposrednim znanjem da zastupa gledište: ’Ne postoji takva stvar kao što je znanje i viđenje’ – to ne bi bilo istina.",
-  "dn15:33.0": "5. Sedam nivoa svesti"
+  "dn15:33.0": "5. Sedam nivoa svesti",
+  "dn15:33.1": "Ānanda, postoji ovih sedam nivoa svesti i dve osnove. Kojih sedam?"
 }
