--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -218,5 +218,6 @@
   "dn15:33.1": "Ānanda, postoji ovih sedam stanica za svest i dve osnove.",
   "dn15:33.2": "Kojih sedam?",
   "dn15:33.3": "Postoje, Ānanda, bića koja se razlikuju po telu i po opažanju, kao što su ljudska bića, božanstva i neka bića u nižim svetovima.",
-  "dn15:33.4": "To je prva stanica za svest."
+  "dn15:33.4": "To je prva stanica za svest.",
+  "dn15:33.5": "Postoje bića koja se razlikuju po telu, ali su identična po opažanju, kao što su božanstva iz sveta Brahme, koja su nastala na osnovu prvog zadubljenja."
 }
