Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -219,5 +219,6 @@
   "dn15:33.2": "Kojih sedam?",
   "dn15:33.3": "Postoje, Ānanda, bića koja se razlikuju po telu i po opažanju, kao što su ljudska bića, božanstva i neka bića u nižim svetovima.",
   "dn15:33.4": "To je prva stanica za svest.",
-  "dn15:33.5": "Postoje bića koja se razlikuju po telu, ali su identična po opažanju, kao što su božanstva iz sveta Brahme, koja su nastala na osnovu prvog zadubljenja."
+  "dn15:33.5": "Postoje bića koja se razlikuju po telu, ali su identična po opažanju, kao što su božanstva iz sveta Brahme, koja su nastala na osnovu prvog zadubljenja.",
+  "dn15:33.6": "To je druga stanica za svest."
 }
