--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -222,5 +222,6 @@
   "dn15:33.5": "Postoje bića koja se razlikuju po telu, ali su identična po opažanju, kao što su božanstva iz sveta Brahme, koja su nastala na osnovu prvog zadubljenja.",
   "dn15:33.6": "To je druga stanica za svest.",
   "dn15:33.7": "Postoje bića koja su identična po telu, ali se razlikuju po opažanju, kao što su božanstva neprekidnog sjaja.",
-  "dn15:33.8": "To je treća stanica za svest."
+  "dn15:33.8": "To je treća stanica za svest.",
+  "dn15:33.9": "Postoje bića koja su identična po telu i po opažanju, kao što su božanstva blistave slave."
 }
