Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -223,5 +223,6 @@
   "dn15:33.6": "To je druga stanica za svest.",
   "dn15:33.7": "Postoje bića koja su identična po telu, ali se razlikuju po opažanju, kao što su božanstva neprekidnog sjaja.",
   "dn15:33.8": "To je treća stanica za svest.",
-  "dn15:33.9": "Postoje bića koja su identična po telu i po opažanju, kao što su božanstva blistave slave."
+  "dn15:33.9": "Postoje bića koja su identična po telu i po opažanju, kao što su božanstva blistave slave.",
+  "dn15:33.10": "To je četvrta stanica za svest."
 }
