--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -224,5 +224,6 @@
   "dn15:33.7": "Postoje bića koja su identična po telu, ali se razlikuju po opažanju, kao što su božanstva neprekidnog sjaja.",
   "dn15:33.8": "To je treća stanica za svest.",
   "dn15:33.9": "Postoje bića koja su identična po telu i po opažanju, kao što su božanstva blistave slave.",
-  "dn15:33.10": "To je četvrta stanica za svest."
+  "dn15:33.10": "To je četvrta stanica za svest.",
+  "dn15:33.11": "Postoje bića koja, kroz potpuno nadilaženje opažanjâ materijalnih oblika, prestanak opažanjâ podražaja, neobraćanje pažnje na opažanja raznolikosti i (kontemplirajući) ’Prostor je beskrajan’, stižu u područje beskrajnog prostora."
 }
