Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -225,5 +225,6 @@
   "dn15:33.8": "To je treća stanica za svest.",
   "dn15:33.9": "Postoje bića koja su identična po telu i po opažanju, kao što su božanstva blistave slave.",
   "dn15:33.10": "To je četvrta stanica za svest.",
-  "dn15:33.11": "Postoje bića koja, kroz potpuno nadilaženje opažanjâ materijalnih oblika, prestanak opažanjâ podražaja, neobraćanje pažnje na opažanja raznolikosti i (kontemplirajući) ’Prostor je beskrajan’, stižu u područje beskrajnog prostora."
+  "dn15:33.11": "Postoje bića koja, kroz potpuno nadilaženje opažanjâ materijalnih oblika, prestanak opažanjâ podražaja, neobraćanje pažnje na opažanja raznolikosti i (kontemplirajući) ’Prostor je beskrajan’, stižu u područje beskrajnog prostora.",
+  "dn15:33.12": "To je peta stanica za svest."
 }
