Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -227,5 +227,6 @@
   "dn15:33.10": "To je četvrta stanica za svest.",
   "dn15:33.11": "Postoje bića koja, kroz potpuno nadilaženje opažanjâ materijalnih oblika, prestanak opažanjâ podražaja, neobraćanje pažnje na opažanja raznolikosti i (kontemplirajući) ’Prostor je beskrajan’, stižu u područje beskrajnog prostora.",
   "dn15:33.12": "To je peta stanica za svest.",
-  "dn15:33.13": "Postoje bića koja, kroz potpuno nadilaženje područja beskrajnog prostora i (kontemplirajući) ’Svest je beskonačna’, stižu u područje beskrajne svesti."
+  "dn15:33.13": "Postoje bića koja, kroz potpuno nadilaženje područja beskrajnog prostora i (kontemplirajući) ’Svest je beskonačna’, stižu u područje beskrajne svesti.",
+  "dn15:33.14": "To je šesta stanica za svest."
 }
