Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -230,5 +230,6 @@
   "dn15:33.13": "Postoje bića koja, kroz potpuno nadilaženje područja beskrajnog prostora i (kontemplirajući) ’Svest je beskonačna’, stižu u područje beskrajne svesti.",
   "dn15:33.14": "To je šesta stanica za svest.",
   "dn15:33.15": "Postoje bića koja, kroz potpuno nadilaženje područja beskonačne svesti i (kontemplirajući) ’Ništa ne postoji’, stižu u područje ništavila.",
-  "dn15:33.16": "To je sedma stanica za svest."
+  "dn15:33.16": "To je sedma stanica za svest.",
+  "dn15:33.17": "Osnova bića bez moći opažanja i, druga, osnova ni opažanja ni neopažanja – (to su dve osnove)."
 }
