Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn30_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn30_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn30_translation-de-sabbamitta.json
@@ -440,7 +440,7 @@
   "dn30:2.6.2": "„Sein Wunsch war: ‚Wie können andere nicht verkümmern ",
   "dn30:2.6.3": "in Bezug auf Vertrauen, sittliches Verhalten, Gelehrsamkeit und Verstand, ",
   "dn30:2.6.4": "in Bezug auf Großzügigkeit, Lehren und sonst noch viel Gutes, ",
-  "dn30:2.6.5": "in Bezug auf Münzen und Getreide, Äcker und Land, ",
+  "dn30:2.6.5": "in Bezug auf Geld und Getreide, Äcker und Land, ",
   "dn30:2.6.6": "Kinder, Partnerinnen und Viehbestand, ",
   "dn30:2.6.7": "Familie, Freunde und Sippe, ",
   "dn30:2.6.8": "Gesundheit, Schönheit und Glück?‘ ",
