--- a/translation/de/sabbamitta/sutta/dn/dn30_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn30_translation-de-sabbamitta.json
@@ -449,7 +449,7 @@
   "dn30:2.6.11": "seine Schulterfurche ausgefüllt und der Rumpf ebenmäßig gerundet. ",
   "dn30:2.6.12": "Wegen der früheren gut getanen Werke ",
   "dn30:2.6.13": "hatte er das Omen des Nicht-Verkümmerns. ",
-  "dn30:2.6.14": "Selbst als Laie wächst er an Korn und Münzen, ",
+  "dn30:2.6.14": "Selbst als Laie wächst er an Getreide und Geld, ",
   "dn30:2.6.15": "an Frauen, Kindern und Viehbestand. ",
   "dn30:2.6.16": "Doch wenn er fortgezogen ist und nichts besitzt, ",
   "dn30:2.6.17": "gewinnt er das unübertreffliche Erwachen, das  niemals verkümmern kann.“ ",
