--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -232,5 +232,6 @@
   "dn15:33.15": "Postoje bića koja, kroz potpuno nadilaženje područja beskonačne svesti i (kontemplirajući) ’Ništa ne postoji’, stižu u područje ništavila.",
   "dn15:33.16": "To je sedma stanica za svest.",
   "dn15:33.17": "Osnova bića bez moći opažanja i, druga, osnova ni opažanja ni neopažanja – (to su dve osnove).",
-  "dn15:34.1": "Sada, u pogledu tih sedam stanica za svest i dve osnove,"
+  "dn15:34.1": "Sada, u pogledu tih sedam stanica za svest i dve osnove,",
+  "dn15:34.2": "ako neko razume prvu stanicu za svest, onu bića koja se razlikuju po telu i po opažanju, i ako razume njen nastanak, prestanak, njezino zadovoljenje, nedovoljnost i izlaz iz nje, da li mu priliči da traži užitak u njoj?\""
 }
