--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -236,5 +236,6 @@
   "dn15:34.2": "ako neko razume prvu stanicu za svest, onu bića koja se razlikuju po telu i po opažanju, i ako razume njen nastanak, prestanak, njezino zadovoljenje, nedovoljnost i izlaz iz nje, da li mu priliči da traži užitak u njoj?\"",
   "dn15:34.3": "„Sigurno da ne, poštovani gospodine”…",
   "dn15:34.4": "„Ako neko razume preostale stanice za svest…",
-  "dn15:34.5": "područje bića bez moći opažanja… područje ni opažanja ni neopažanja i ako razume njen nastanak, prestanak, njezino zadovoljenje, nedovoljnost i izlaz iz nje, da li mu priliči da traži užitak u njoj?”"
+  "dn15:34.5": "područje bića bez moći opažanja… područje ni opažanja ni neopažanja i ako razume njen nastanak, prestanak, njezino zadovoljenje, nedovoljnost i izlaz iz nje, da li mu priliči da traži užitak u njoj?”",
+  "dn15:34.6": "„Sigurno da ne, poštovani gospodine.”"
 }
