Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -239,5 +239,6 @@
   "dn15:34.5": "područje bića bez moći opažanja… područje ni opažanja ni neopažanja i ako razume njen nastanak, prestanak, njezino zadovoljenje, nedovoljnost i izlaz iz nje, da li mu priliči da traži užitak u njoj?”",
   "dn15:34.6": "„Sigurno da ne, poštovani gospodine.”",
   "dn15:34.9": "„Sigurno da ne, poštovani gospodine.”",
-  "dn15:34.10": "„Ānanda, kada je monah – pošto je razumeo onako kako zaista jeste nastanak, prestanak, zadovoljenje, nedovoljnost i izlaz u pogledu ovih sedam stanica za svest i dve osnove – oslobođen ne-prianjanjem, tada se on naziva monahom oslobođenim mudrošću.”"
+  "dn15:34.10": "„Ānanda, kada je monah – pošto je razumeo onako kako zaista jeste nastanak, prestanak, zadovoljenje, nedovoljnost i izlaz u pogledu ovih sedam stanica za svest i dve osnove – oslobođen ne-prianjanjem, tada se on naziva monahom oslobođenim mudrošću.”",
+  "dn15:35.0": "6. Osam oslobođenja"
 }
