--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -242,5 +242,6 @@
   "dn15:34.10": "„Ānanda, kada je monah – pošto je razumeo onako kako zaista jeste nastanak, prestanak, zadovoljenje, nedovoljnost i izlaz u pogledu ovih sedam stanica za svest i dve osnove – oslobođen ne-prianjanjem, tada se on naziva monahom oslobođenim mudrošću.”",
   "dn15:35.0": "6. Osam oslobođenja",
   "dn15:35.1": "Ānanda, postoji osam oslobođenja.",
-  "dn15:35.2": "Kojih osam?"
+  "dn15:35.2": "Kojih osam?",
+  "dn15:35.3": "Neko ko ima materijalni oblik vidi materijalne oblike."
 }
