Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -243,5 +243,6 @@
   "dn15:35.0": "6. Osam oslobođenja",
   "dn15:35.1": "Ānanda, postoji osam oslobođenja.",
   "dn15:35.2": "Kojih osam?",
-  "dn15:35.3": "Neko ko ima materijalni oblik vidi materijalne oblike."
+  "dn15:35.3": "Neko ko ima materijalni oblik vidi materijalne oblike.",
+  "dn15:35.4": "To je prvo oslobođenje."
 }
