Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -244,5 +244,6 @@
   "dn15:35.1": "Ānanda, postoji osam oslobođenja.",
   "dn15:35.2": "Kojih osam?",
   "dn15:35.3": "Neko ko ima materijalni oblik vidi materijalne oblike.",
-  "dn15:35.4": "To je prvo oslobođenje."
+  "dn15:35.4": "To je prvo oslobođenje.",
+  "dn15:35.5": "Neko ko ne opaža materijalne oblik interno, vidi materijalne oblike eksterno."
 }
