Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -246,5 +246,6 @@
   "dn15:35.3": "Neko ko ima materijalni oblik vidi materijalne oblike.",
   "dn15:35.4": "To je prvo oslobođenje.",
   "dn15:35.5": "Neko ko ne opaža materijalne oblik interno, vidi materijalne oblike eksterno.",
-  "dn15:35.6": "To je drugo oslobođenje."
+  "dn15:35.6": "To je drugo oslobođenje.",
+  "dn15:35.7": "Neko biva oslobođen zahvaljujući ideji lepoga."
 }
