Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -247,5 +247,6 @@
   "dn15:35.4": "To je prvo oslobođenje.",
   "dn15:35.5": "Neko ko ne opaža materijalne oblik interno, vidi materijalne oblike eksterno.",
   "dn15:35.6": "To je drugo oslobođenje.",
-  "dn15:35.7": "Neko biva oslobođen zahvaljujući ideji lepoga."
+  "dn15:35.7": "Neko biva oslobođen zahvaljujući ideji lepoga.",
+  "dn15:35.8": "To je treće oslobođenje."
 }
