--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -248,5 +248,6 @@
   "dn15:35.5": "Neko ko ne opaža materijalne oblik interno, vidi materijalne oblike eksterno.",
   "dn15:35.6": "To je drugo oslobođenje.",
   "dn15:35.7": "Neko biva oslobođen zahvaljujući ideji lepoga.",
-  "dn15:35.8": "To je treće oslobođenje."
+  "dn15:35.8": "To je treće oslobođenje.",
+  "dn15:35.9": "Kroz potpuno nadilaženje opažanjâ materijalnog oblika, prestanka opažanjâ podražaja, neobraćanje pažnje na opažanja raznolikosti i (kontemplirajući) ’Prostor je beskrajan’, neko stiže i boravi u područje beskrajnog prostora."
 }
