Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -249,5 +249,6 @@
   "dn15:35.6": "To je drugo oslobođenje.",
   "dn15:35.7": "Neko biva oslobođen zahvaljujući ideji lepoga.",
   "dn15:35.8": "To je treće oslobođenje.",
-  "dn15:35.9": "Kroz potpuno nadilaženje opažanjâ materijalnog oblika, prestanka opažanjâ podražaja, neobraćanje pažnje na opažanja raznolikosti i (kontemplirajući) ’Prostor je beskrajan’, neko stiže i boravi u područje beskrajnog prostora."
+  "dn15:35.9": "Kroz potpuno nadilaženje opažanjâ materijalnog oblika, prestanka opažanjâ podražaja, neobraćanje pažnje na opažanja raznolikosti i (kontemplirajući) ’Prostor je beskrajan’, neko stiže i boravi u područje beskrajnog prostora.",
+  "dn15:35.10": "To je četvrto oslobođenje."
 }
