Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -252,5 +252,6 @@
   "dn15:35.9": "Kroz potpuno nadilaženje opažanjâ materijalnog oblika, prestanka opažanjâ podražaja, neobraćanje pažnje na opažanja raznolikosti i (kontemplirajući) ’Prostor je beskrajan’, neko stiže i boravi u područje beskrajnog prostora.",
   "dn15:35.10": "To je četvrto oslobođenje.",
   "dn15:35.11": "Kroz potpuno nadilaženje područja beskrajnog prostora i (kontemplirajući) ’Svest je beskonačna’, neko stiže i boavi u području beskrajne svesti.",
-  "dn15:35.12": "To je peto oslobođenje."
+  "dn15:35.12": "To je peto oslobođenje.",
+  "dn15:35.13": "Kroz potpuno nadilaženje područja beskonačne svesti i (kontemplirajući) ’Ništa ne postoji’, neko stiže i boravi u području ništavila."
 }
