--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -254,5 +254,6 @@
   "dn15:35.11": "Kroz potpuno nadilaženje područja beskrajnog prostora i (kontemplirajući) ’Svest je beskonačna’, neko stiže i boavi u području beskrajne svesti.",
   "dn15:35.12": "To je peto oslobođenje.",
   "dn15:35.13": "Kroz potpuno nadilaženje područja beskonačne svesti i (kontemplirajući) ’Ništa ne postoji’, neko stiže i boravi u području ništavila.",
-  "dn15:35.14": "To je šesto oslobođenje."
+  "dn15:35.14": "To je šesto oslobođenje.",
+  "dn15:35.15": "Kroz potpuno nadilaženje područja ništavila, neko stiže i boravi u području ni opažanja ni neopažanja."
 }
