Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn19_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn19_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn19_translation-de-sabbamitta.json
@@ -366,7 +366,7 @@
   "dn19:48.5": "Ich werde aus dem Haus fortziehen ins hauslose Leben!“ ",
   "dn19:49.1": "Da zogen sich die sechs Adligen zu einer Seite zurück und dachten einen Plan aus: ",
   "dn19:49.2": "„Diese Brahmanen sind wirklich gierig nach Geld. ",
-  "dn19:49.3": "Warum versuchen wir nicht, ihn mit Reichtümern zu überzeugen?“ ",
+  "dn19:49.3": "Warum versuchen wir nicht, ihn mit Geld zu überzeugen?“ ",
   "dn19:49.4": "Sie gingen zum Großen Verwalter zurück und sagten: ",
   "dn19:49.5": "„In diesen sieben Königreichen gibt es Reichtümer in Fülle. Wir werden dir soviel davon zur Verfügung stellen, wie du willst.“ ",
   "dn19:49.6": "„Genug, ihr Herren. Ich habe selbst Reichtümer in Fülle, die ich meinen Herren verdanke. ",
