--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -255,5 +255,6 @@
   "dn15:35.12": "To je peto oslobođenje.",
   "dn15:35.13": "Kroz potpuno nadilaženje područja beskonačne svesti i (kontemplirajući) ’Ništa ne postoji’, neko stiže i boravi u području ništavila.",
   "dn15:35.14": "To je šesto oslobođenje.",
-  "dn15:35.15": "Kroz potpuno nadilaženje područja ništavila, neko stiže i boravi u području ni opažanja ni neopažanja."
+  "dn15:35.15": "Kroz potpuno nadilaženje područja ništavila, neko stiže i boravi u području ni opažanja ni neopažanja.",
+  "dn15:35.16": "To je sedmo oslobođenje."
 }
