Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -258,5 +258,6 @@
   "dn15:35.15": "Kroz potpuno nadilaženje područja ništavila, neko stiže i boravi u području ni opažanja ni neopažanja.",
   "dn15:35.16": "To je sedmo oslobođenje.",
   "dn15:35.17": "Kroz potpuno nadilaženje područja ni opažanja ni neopažanja, neko stiže i boravi u prestanku opažanja i osećanja.",
-  "dn15:35.18": "To je osmo oslobođenje."
+  "dn15:35.18": "To je osmo oslobođenje.",
+  "dn15:35.19": "To je, Ānanda, osam oslobođenja."
 }
