Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -259,5 +259,6 @@
   "dn15:35.16": "To je sedmo oslobođenje.",
   "dn15:35.17": "Kroz potpuno nadilaženje područja ni opažanja ni neopažanja, neko stiže i boravi u prestanku opažanja i osećanja.",
   "dn15:35.18": "To je osmo oslobođenje.",
-  "dn15:35.19": "To je, Ānanda, osam oslobođenja."
+  "dn15:35.19": "To je, Ānanda, osam oslobođenja.",
+  "dn15:36.1": "Ānanda, kada monah dostigne ovih osam oslobođenja normalnim redom, obrnutim redom, kao i normalnim i obrnutim redom; kada ih dostigne i izranja iz njih gde god poželi, na koji god način poželi i koliko god dugo da želi;"
 }
