--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -261,5 +261,6 @@
   "dn15:35.18": "To je osmo oslobođenje.",
   "dn15:35.19": "To je, Ānanda, osam oslobođenja.",
   "dn15:36.1": "Ānanda, kada monah dostigne ovih osam oslobođenja normalnim redom, obrnutim redom, kao i normalnim i obrnutim redom; kada ih dostigne i izranja iz njih gde god poželi, na koji god način poželi i koliko god dugo da želi;",
-  "dn15:36.2": "kada kroz uklanjanje svih otrova, on ovde i sada dostiže i boravi u potpuno čistom oslobođenju uma, oslobođenju mudrošću, ostvarivši to sam za sebe uz pomoć neposrednog znanja, tada se on naziva monahom oslobođenim na oba načina."
+  "dn15:36.2": "kada kroz uklanjanje svih otrova, on ovde i sada dostiže i boravi u potpuno čistom oslobođenju uma, oslobođenju mudrošću, ostvarivši to sam za sebe uz pomoć neposrednog znanja, tada se on naziva monahom oslobođenim na oba načina.",
+  "dn15:36.3": "I ne postoji, Ānanda, oslobođenje na oba načina više i uzvišenije nego što je to.”"
 }
