--- a/translation/de/sabbamitta/sutta/an/an10/an10.24_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.24_translation-de-sabbamitta.json
@@ -168,7 +168,7 @@
   "an10.24:9.21": "das böse Eifersucht beseitigt … ",
   "an10.24:9.22": "und das unlautere Wünsche beseitigt, daher beherrschen unlautere Wünsche ihn nicht und halten nicht an.‘ ",
   "an10.24:10.1": "Wie ein reicher, wohlhabender und vermögender Mensch, der erklärt, er sei reich, wohlhabend und vermögend. ",
-  "an10.24:10.2": "Und jedes Mal, wenn eine Zahlung fällig würde, wäre er in der Lage, Geld, Korn, Silber oder Gold beizubringen. ",
+  "an10.24:10.2": "Und jedes Mal, wenn eine Zahlung fällig würde, wäre er in der Lage, Geld, Getreide, Silber oder Gold beizubringen. ",
   "an10.24:10.3": "Dann wüsste man von ihm: ",
   "an10.24:10.4": "‚Dieser Mensch erklärt, er sei reich, wohlhabend und vermögend, und tatsächlich ist er reich, wohlhabend und vermögend.‘ ",
   "an10.24:10.5": "Und warum? ",
