--- a/translation/de/sabbamitta/sutta/an/an5/an5.191_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.191_translation-de-sabbamitta.json
@@ -17,7 +17,7 @@
   "an5.191:3.3": "Aber Hunde kaufen heutzutage keine Hündinnen, noch verkaufen sie sie. Sie leben zusammen, weil sie voneinander angezogen sind, und wollen, dass ihre Familie fortbesteht. ",
   "an5.191:3.4": "Das ist der dritte brahmanische Brauch, den man heutzutage bei Hunden sieht, aber nicht bei Brahmanen. ",
   "an5.191:4.1": "In der Vergangenheit legten die Brahmanen keine Vorräte von Geld, Getreide, Silber oder Gold an. ",
-  "an5.191:4.2": "Heutzutage legen die Brahmanen Vorräte von Geld, Korn, Silber und Gold an. ",
+  "an5.191:4.2": "Heutzutage legen die Brahmanen Vorräte von Geld, Getreide, Silber und Gold an. ",
   "an5.191:4.3": "Aber Hunde legen heutzutage keine Vorräte von Geld, Korn, Silber oder Gold an. ",
   "an5.191:4.4": "Das ist der vierte brahmanische Brauch, den man heutzutage bei Hunden sieht, aber nicht bei Brahmanen. ",
   "an5.191:5.1": "In der Vergangenheit machten sich die Brahmanen abends für das Abendessen und morgens für das Frühstück auf die Suche nach Almosen. ",
