--- a/translation/de/sabbamitta/sutta/an/an5/an5.191_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.191_translation-de-sabbamitta.json
@@ -18,7 +18,7 @@
   "an5.191:3.4": "Das ist der dritte brahmanische Brauch, den man heutzutage bei Hunden sieht, aber nicht bei Brahmanen. ",
   "an5.191:4.1": "In der Vergangenheit legten die Brahmanen keine Vorräte von Geld, Getreide, Silber oder Gold an. ",
   "an5.191:4.2": "Heutzutage legen die Brahmanen Vorräte von Geld, Getreide, Silber und Gold an. ",
-  "an5.191:4.3": "Aber Hunde legen heutzutage keine Vorräte von Geld, Korn, Silber oder Gold an. ",
+  "an5.191:4.3": "Aber Hunde legen heutzutage keine Vorräte von Geld, Getreide, Silber oder Gold an. ",
   "an5.191:4.4": "Das ist der vierte brahmanische Brauch, den man heutzutage bei Hunden sieht, aber nicht bei Brahmanen. ",
   "an5.191:5.1": "In der Vergangenheit machten sich die Brahmanen abends für das Abendessen und morgens für das Frühstück auf die Suche nach Almosen. ",
   "an5.191:5.2": "Heutzutage essen die Brahmanen sich ordentlich satt, bis ihre Bäuche voll sind, und nehmen die Reste mit. ",
