Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -1,4 +1,5 @@
 {
   "dn16:0.1": "Zbirka dugih govora 16",
-  "dn16:0.2": "Dugi govor o konačnom oslobođenju"
+  "dn16:0.2": "Dugi govor o konačnom oslobođenju",
+  "dn16:1.1.1": "Ovako sam čuo."
 }
