--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -2,5 +2,6 @@
   "dn16:0.1": "Zbirka dugih govora 16",
   "dn16:0.2": "Dugi govor o konačnom oslobođenju",
   "dn16:1.1.1": "Ovako sam čuo.",
-  "dn16:1.1.2": "Jednom je Blaženi živeo kraj Rāđagahe, na Lešinarevoj hridi."
+  "dn16:1.1.2": "Jednom je Blaženi živeo kraj Rāđagahe, na Lešinarevoj hridi.",
+  "dn16:1.1.3": "A u to vreme Ađātasattu Vedehiputta, kralj Magadhe, nameravao je da povede rat protiv Vađđija."
 }
