--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -3,5 +3,6 @@
   "dn16:0.2": "Dugi govor o konačnom oslobođenju",
   "dn16:1.1.1": "Ovako sam čuo.",
   "dn16:1.1.2": "Jednom je Blaženi živeo kraj Rāđagahe, na Lešinarevoj hridi.",
-  "dn16:1.1.3": "A u to vreme Ađātasattu Vedehiputta, kralj Magadhe, nameravao je da povede rat protiv Vađđija."
+  "dn16:1.1.3": "A u to vreme Ađātasattu Vedehiputta, kralj Magadhe, nameravao je da povede rat protiv Vađđija.",
+  "dn16:1.1.4": "Ovako je govorio:"
 }
