--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -4,5 +4,6 @@
   "dn16:1.1.1": "Ovako sam čuo.",
   "dn16:1.1.2": "Jednom je Blaženi živeo kraj Rāđagahe, na Lešinarevoj hridi.",
   "dn16:1.1.3": "A u to vreme Ađātasattu Vedehiputta, kralj Magadhe, nameravao je da povede rat protiv Vađđija.",
-  "dn16:1.1.4": "Ovako je govorio:"
+  "dn16:1.1.4": "Ovako je govorio:",
+  "dn16:1.1.5": "„Te Vađđije, makoliko da su snažni i moćni, ja ću razoriti, izazvati njihovu propast, dovesti do uništenja.”"
 }
