--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -5,5 +5,6 @@
   "dn16:1.1.2": "Jednom je Blaženi živeo kraj Rāđagahe, na Lešinarevoj hridi.",
   "dn16:1.1.3": "A u to vreme Ađātasattu Vedehiputta, kralj Magadhe, nameravao je da povede rat protiv Vađđija.",
   "dn16:1.1.4": "Ovako je govorio:",
-  "dn16:1.1.5": "„Te Vađđije, makoliko da su snažni i moćni, ja ću razoriti, izazvati njihovu propast, dovesti do uništenja.”"
+  "dn16:1.1.5": "„Te Vađđije, makoliko da su snažni i moćni, ja ću razoriti, izazvati njihovu propast, dovesti do uništenja.”",
+  "dn16:1.2.1": "Onda kralj Ađātasattu reče svom glavnom savetniku brahmanu Vassakāri:"
 }
