--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -6,5 +6,6 @@
   "dn16:1.1.3": "A u to vreme Ađātasattu Vedehiputta, kralj Magadhe, nameravao je da povede rat protiv Vađđija.",
   "dn16:1.1.4": "Ovako je govorio:",
   "dn16:1.1.5": "„Te Vađđije, makoliko da su snažni i moćni, ja ću razoriti, izazvati njihovu propast, dovesti do uništenja.”",
-  "dn16:1.2.1": "Onda kralj Ađātasattu reče svom glavnom savetniku brahmanu Vassakāri:"
+  "dn16:1.2.1": "Onda kralj Ađātasattu reče svom glavnom savetniku brahmanu Vassakāri:",
+  "dn16:1.2.2": "„Hajde, brahmane, idi do Blaženog, pokloni mu se do nogu u moje ime i upitaj ga živi li bez poteškoća, ima li kakvih bolesti, služe li ga zdravlje i snaga, živi li udobno. Takođe mu reci:"
 }
