--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -8,5 +8,6 @@
   "dn16:1.1.5": "„Te Vađđije, makoliko da su snažni i moćni, ja ću razoriti, izazvati njihovu propast, dovesti do uništenja.”",
   "dn16:1.2.1": "Onda kralj Ađātasattu reče svom glavnom savetniku brahmanu Vassakāri:",
   "dn16:1.2.2": "„Hajde, brahmane, idi do Blaženog, pokloni mu se do nogu u moje ime i upitaj ga živi li bez poteškoća, ima li kakvih bolesti, služe li ga zdravlje i snaga, živi li udobno. Takođe mu reci:",
+  "dn16:1.2.6": "On ovako kaže:",
   "dn16:1.2.8": "Dobro zapamti šta će ti Blaženi na to odgovoriti i dođi da mi to preneseš."
 }
