Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -11,5 +11,6 @@
   "dn16:1.2.4": " Takođe mu reci:",
   "dn16:1.2.5": "’Poštovani gospodine, Ađātasattu Vedehiputta, kralj Magadhe, namerava da povede rat protiv Vađđija.",
   "dn16:1.2.6": "On ovako kaže:",
-  "dn16:1.2.8": "Dobro zapamti šta će ti Blaženi na to odgovoriti i dođi da mi to preneseš."
+  "dn16:1.2.8": "Dobro zapamti šta će ti Blaženi na to odgovoriti i dođi da mi to preneseš.",
+  "dn16:1.2.9": "Tathāgate ne govore laži.”"
 }
