--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -12,5 +12,6 @@
   "dn16:1.2.5": "’Poštovani gospodine, Ađātasattu Vedehiputta, kralj Magadhe, namerava da povede rat protiv Vađđija.",
   "dn16:1.2.6": "On ovako kaže:",
   "dn16:1.2.8": "Dobro zapamti šta će ti Blaženi na to odgovoriti i dođi da mi to preneseš.",
-  "dn16:1.2.9": "Tathāgate ne govore laži.”"
+  "dn16:1.2.9": "Tathāgate ne govore laži.”",
+  "dn16:1.3.0": "1. Brahman Vassakāra"
 }
