Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -13,5 +13,6 @@
   "dn16:1.2.6": "On ovako kaže:",
   "dn16:1.2.8": "Dobro zapamti šta će ti Blaženi na to odgovoriti i dođi da mi to preneseš.",
   "dn16:1.2.9": "Tathāgate ne govore laži.”",
-  "dn16:1.3.0": "1. Brahman Vassakāra"
+  "dn16:1.3.0": "1. Brahman Vassakāra",
+  "dn16:1.3.1": "„Da, vaše visočanstvo,” odgovori brahman i naredi da se pripremi veliki broj svečanih kočija, pope se na jednu od njih i praćen ostalima izveze se iz Rađagahe ka Lešinarevoj hridi."
 }
