--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -15,5 +15,6 @@
   "dn16:1.2.9": "Tathāgate ne govore laži.”",
   "dn16:1.3.0": "1. Brahman Vassakāra",
   "dn16:1.3.1": "„Da, vaše visočanstvo,” odgovori brahman i naredi da se pripremi veliki broj svečanih kočija, pope se na jednu od njih i praćen ostalima izveze se iz Rađagahe ka Lešinarevoj hridi.",
-  "dn16:1.3.2": "Vozio se u kočiji dokle je bilo moguće, pa onda sa nje siđe i peške stiže do Blaženog. Kada je stigao, pozdravi se sa njim,"
+  "dn16:1.3.2": "Vozio se u kočiji dokle je bilo moguće, pa onda sa nje siđe i peške stiže do Blaženog. Kada je stigao, pozdravi se sa njim,",
+  "dn16:1.3.3": "a kad taj učtivi i prijateljski razgovor bi završen, sede sa strane i reče:"
 }
