Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -18,5 +18,6 @@
   "dn16:1.3.2": "Vozio se u kočiji dokle je bilo moguće, pa onda sa nje siđe i peške stiže do Blaženog. Kada je stigao, pozdravi se sa njim,",
   "dn16:1.3.3": "a kad taj učtivi i prijateljski razgovor bi završen, sede sa strane i reče:",
   "dn16:1.3.4": "„Poštovani gospodine, Ađātasattu Vedehiputta, kralj Magadhe, klanja se do nogu Blaženog i pita ga živi li bez poteškoća, ima li kakvih bolesti, služe li ga zdravlje i snaga, živi li udobno.",
-  "dn16:1.3.5": "Takođe, kralj Ađātasattu namerava da povede rat protiv Vađđija. "
+  "dn16:1.3.5": "Takođe, kralj Ađātasattu namerava da povede rat protiv Vađđija. ",
+  "dn16:1.3.6": "On ovako kaže:"
 }
