Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -19,5 +19,6 @@
   "dn16:1.3.3": "a kad taj učtivi i prijateljski razgovor bi završen, sede sa strane i reče:",
   "dn16:1.3.4": "„Poštovani gospodine, Ađātasattu Vedehiputta, kralj Magadhe, klanja se do nogu Blaženog i pita ga živi li bez poteškoća, ima li kakvih bolesti, služe li ga zdravlje i snaga, živi li udobno.",
   "dn16:1.3.5": "Takođe, kralj Ađātasattu namerava da povede rat protiv Vađđija. ",
-  "dn16:1.3.6": "On ovako kaže:"
+  "dn16:1.3.6": "On ovako kaže:",
+  "dn16:1.3.7": "„Te Vađđije, makoliko da su snažni i moćni, ja ću razoriti, izazvati njihovu propast, dovesti do uništenja.”"
 }
