--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -21,5 +21,6 @@
   "dn16:1.3.5": "Takođe, kralj Ađātasattu namerava da povede rat protiv Vađđija. ",
   "dn16:1.3.6": "On ovako kaže:",
   "dn16:1.3.7": "„Te Vađđije, makoliko da su snažni i moćni, ja ću razoriti, izazvati njihovu propast, dovesti do uništenja.”",
-  "dn16:1.4.0": "2. Načela na kojima zajednica opstaje"
+  "dn16:1.4.0": "2. Načela na kojima zajednica opstaje",
+  "dn16:1.4.1": "Tom prilikom je poštovani Ānanda stajao iza Blaženog i hladio ga lepezom."
 }
