Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -25,5 +25,6 @@
   "dn16:1.4.1": "Tom prilikom je poštovani Ānanda stajao iza Blaženog i hladio ga lepezom.",
   "dn16:1.4.2": "Onda mu Blaženi reče:",
   "dn16:1.4.3": "(1) „Ānanda, jesi li čuo kako se Vađđi često okupljaju u svom veću, kako se redovno sastaju?”",
-  "dn16:1.4.4": "„Da, poštovani gospodine, čuo sam o tome.”"
+  "dn16:1.4.4": "„Da, poštovani gospodine, čuo sam o tome.”",
+  "dn16:1.4.5": "„Ānanda, sve dok se Vađđi često okupljaju u svom veću, redovno sastaju, može se očekivati da oni napreduju, a ne da propadaju."
 }
