--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -28,5 +28,6 @@
   "dn16:1.4.4": "„Da, poštovani gospodine, čuo sam o tome.”",
   "dn16:1.4.5": "„Ānanda, sve dok se Vađđi često okupljaju u svom veću, redovno sastaju, može se očekivati da oni napreduju, a ne da propadaju.",
   "dn16:1.4.6": "(2) A jesi li, Ānanda, čuo kako se Vađđiji u slozi sastaju, u slozi razilaze, u slozi svoje poslove obavljaju?”",
-  "dn16:1.4.7": "”Da, poštovani gospodine, čuo sam o tome.”"
+  "dn16:1.4.7": "”Da, poštovani gospodine, čuo sam o tome.”",
+  "dn16:1.4.8": "„Ānanda, sve dok se Vađđiji u slozi sastaju, u slozi razilaze, u slozi svoje poslove obavljaju, može se očekivati da oni napreduju, a ne da propadaju."
 }
