--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -31,5 +31,6 @@
   "dn16:1.4.7": "”Da, poštovani gospodine, čuo sam o tome.”",
   "dn16:1.4.8": "„Ānanda, sve dok se Vađđiji u slozi sastaju, u slozi razilaze, u slozi svoje poslove obavljaju, može se očekivati da oni napreduju, a ne da propadaju.",
   "dn16:1.4.9": "(3) A jesi li, Ānanda, čuo da Vađđiji ne proglašavaju pravilom nešto što već ne važi kao pravilo, ne ukidaju ono što već važi kao pravilo i drže se onoga što znaju kao svoj zakon od davnina?” ",
-  "dn16:1.4.10": "„Da, poštovani gospodine, čuo sam o tome.”"
+  "dn16:1.4.10": "„Da, poštovani gospodine, čuo sam o tome.”",
+  "dn16:1.4.11": "„Ānanda, sve dok Vađđiji ne proglašavaju pravilom nešto što već ne važi kao pravilo, ne ukidaju ono što već važi kao pravilo i drže se onoga što znaju kao svoj zakon od davnina, može se očekivati da oni napreduju, a ne da propadaju."
 }
