Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -35,5 +35,6 @@
   "dn16:1.4.11": "„Ānanda, sve dok Vađđiji ne proglašavaju pravilom nešto što već ne važi kao pravilo, ne ukidaju ono što već važi kao pravilo i drže se onoga što znaju kao svoj zakon od davnina, može se očekivati da oni napreduju, a ne da propadaju.",
   "dn16:1.4.12": "(4) A jesi li, Ānanda, čuo da Vađđiji poštuju one među sobom koji su stari, ophode se sa njima sa poštovanjem, uvažavaju i slave, smatraju da njihove reči vredi saslušati?”",
   "dn16:1.4.13": "„Da, poštovani gospodine, čuo sam o tome.”",
-  "dn16:1.4.14": "„Ānanda, sve dok Vađđiji poštuju one među sobom koji su stari, ophode se sa njima sa poštovanjem, uvažavaju i slave, smatraju da njihove reči vredi saslušati, može se očekivati da oni napreduju, a ne da propadaju."
+  "dn16:1.4.14": "„Ānanda, sve dok Vađđiji poštuju one među sobom koji su stari, ophode se sa njima sa poštovanjem, uvažavaju i slave, smatraju da njihove reči vredi saslušati, može se očekivati da oni napreduju, a ne da propadaju.",
+  "dn16:1.4.15": "(5) A jesi li, Ānanda, čuo da Vađđiji poštuju žene i devojke među sobom i ne prisiljavaju ih otmicom da žive sa njima?”"
 }
