Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -42,5 +42,6 @@
   "dn16:1.4.18": "(6) A jesi li, Ānanda, čuo da Vađđiji poštuju svoja svetilišta, bilo da su u gradu ili izvan, uvažavaju i slave, ne uskraćuju im ono što im s pravom pripada, baš kao što su to činili i ranije?”",
   "dn16:1.4.19": "„Da, poštovani gospodine, čuo sam o tome.”",
   "dn16:1.4.20": "„Ānanda, sve dok Vađđiji poštuju svoja svetilišta, bilo da su u gradu ili izvan, uvažavaju i slave, ne uskraćuju im ono što im s pravom pripada, baš kao što su to činili i ranije, može se očekivati da oni napreduju, a ne da propadaju.",
-  "dn16:1.4.21": "(7) A jesi li, Ānanda, čuo da Vađđiji grade boravišta za arahante,4 staraju se o njima, snabdevaju onim što im je potrebno, tako da oni vrli askete koji ne žive u njihovoj zemlji požele da tu dođu, a oni koji su već tu, žive zadovoljni, može se očekivati da oni napreduju, a ne da propadaju?”"
+  "dn16:1.4.21": "(7) A jesi li, Ānanda, čuo da Vađđiji grade boravišta za arahante,4 staraju se o njima, snabdevaju onim što im je potrebno, tako da oni vrli askete koji ne žive u njihovoj zemlji požele da tu dođu, a oni koji su već tu, žive zadovoljni, može se očekivati da oni napreduju, a ne da propadaju?”",
+  "dn16:1.4.22": "„Da, poštovani gospodine, čuo sam o tome.”"
 }
