Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -45,5 +45,6 @@
   "dn16:1.4.21": "(7) A jesi li, Ānanda, čuo da Vađđiji grade boravišta za arahante,4 staraju se o njima, snabdevaju onim što im je potrebno, tako da oni vrli askete koji ne žive u njihovoj zemlji požele da tu dođu, a oni koji su već tu, žive zadovoljni, može se očekivati da oni napreduju, a ne da propadaju?”",
   "dn16:1.4.22": "„Da, poštovani gospodine, čuo sam o tome.”",
   "dn16:1.4.23": "„Ānanda, sve dok Vađđiji grade boravišta za arahante, staraju se o njima, snabdevaju onim što im je potrebno, tako da oni vrli askete koji ne žive u njihovoj zemlji požele da tu dođu, a oni koji su već tu, žive zadovoljni, može se očekivati da Vađđiji napreduju, a ne da propadaju.",
-  "dn16:1.5.1": "Onda Blaženi reče brahmanu Vassakāri:"
+  "dn16:1.5.1": "Onda Blaženi reče brahmanu Vassakāri:",
+  "dn16:1.5.2": "„Brahmane, jednom sam živeo blizu Vesālija, kraj Sārandada svetilišta."
 }
